k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-mysql
spec:
  replicas: 1
  serviceName: mysql-h
  selector:
      matchLabels:
        app: app-mysql
  template:
    metadata:
      labels:
        app: app-mysql
    spec:
      containers:
        - name: app-mysql
          image: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume

  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
