k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-dr
  
spec:
  host: app-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: all
      labels:
        app: app
