k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
spec:
  hosts: 
  - "*"
  gateways:
    - "ingress-gateway-app"
  http:
    - route:
      - destination:
          host: app-service
          subset: all
      retries:
       attempts: 3
       perTryTimeout: 2s
       retryOn: connect-failure,refused-stream,503
